--- a/src/home.css
+++ b/src/home.css
@@ -1,12 +1,9 @@
 header {
     width: 100%;
-    position: fixed; /* Makes the navbar fixed at the top */
+    position: fixed; 
     top: 0;
-    left: 0;
-     /* Ensures it stays above other content */
+    left: 0;    
 }
-
-
 body {
     display: flex;
     flex-direction: column;
@@ -26,12 +23,15 @@ body {
 }
 
 .form-container, .table-container {
-    flex: 1;
+    flex: 1;   
     min-width: 300px;
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     padding: 20px;
+}
+.form-container{
+    max-height: max-content;
 }
 .table-container{
     min-width: max-content;
@@ -44,8 +44,6 @@ body {
 .table-container table {
     width: 100%;
     margin-bottom: 20px;
-    border-collapse: collapse;
-    max-width: 100px;
 }
 
 .table-container th, .table-container td {
