--- a/src/home.css
+++ b/src/home.css
@@ -158,6 +158,29 @@ header {
     transition: transform 0.2s, box-shadow 0.2s;
     z-index: 1; /* Lower than the navbar */
 }
+.table-container {
+    overflow-y: visible; /* Enables vertical scrolling only */
+    overflow-x: hidden; /* Removes horizontal scroll bar */
+    max-height: 1345px;
+}
+
+/* Customize the scrollbar */
+.table-container::-webkit-scrollbar {
+    width: 8px; /* Width of the vertical scrollbar */
+}
+
+.table-container::-webkit-scrollbar-thumb {
+    background-color: #26a69a; /* Scrollbar color */
+    border-radius: 4px; /* Rounded corners */
+}
+
+.table-container::-webkit-scrollbar-thumb:hover {
+    background-color: #00796b; /* Darker color on hover */
+}
+
+.table-container::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Track color */
+}
 
 /* Input Fields */
 .input-field input,
